--- a/src/main/webapp/css/mystyle.css
+++ b/src/main/webapp/css/mystyle.css
@@ -11,3 +11,9 @@
 .banner-bg{
 	 clip-path: polygon(30% 0%, 70% 0%, 100% 0, 100% 91%, 63% 100%, 22% 91%, 0 99%, 0 0);
 }
+
+/* load post image style */
+
+
+
+
